Fix search bar dark mode styling

--- a/forgettable-frontend/src/components/SearchBar/SearchBar.module.css
+++ b/forgettable-frontend/src/components/SearchBar/SearchBar.module.css
@@ -13,13 +13,14 @@
 }
 
 .SearchNameInput{
-    background-color: var(--lbkgd);
+    background-color: var(--bkgd);
     border: 0;
     border-radius: 8px 0px 0px 8px;
     font-size: var(--text-normal);
     padding: 15px;
     padding-left: 20px;
     width: 100%;
+    color: var(--txt1);
     font-family: 'Poppins', sans-serif;
 }
 
@@ -32,7 +33,7 @@
     width: 60px;
     border-radius: 0px 8px 8px 0px;
     padding-right: 3px;
-    background-color: var(--lbkgd);
+    background-color: var(--bkgd);
     display: grid;
     place-items: center;
 }
@@ -70,7 +71,7 @@
     display: flex;
     position: relative;
     align-items: center;
-    color: var(--ltxt1);
+    color: var(--txt1);
     text-decoration: none;
 }
 
